refactor(orm): 统一JPA注解前缀并优化类型包装方法
- 新增AnnoUtil.JPA_ROOT，根据环境切换javax.persistence和jakarta.persistence
- 替换所有硬编码的JPA注解字符串为AnnoUtil.JPA_ROOT前缀版本
- 将SetDoubleField等五个类型包装类中的构造函数替换为valueOf方法调用
- 修改测试代码，使用内嵌H2数据库初始化表结构，简化测试准备工作
- 调整RDTest和RRTest测试类，删除冗余数据源创建代码，改为调用Dbs.h2()方法，优化测试初始化流程